@@ -70,6 +70,7 @@ Depoloying A Store
    :maxdepth: 1
    
    deploying
+   managing
 
 Additional Notes
 ================
